testdata/baselines/reference/compiler/noTypeToStringRecursion.errors.txt
noTypeToStringRecursion.ts(3,7): error TS7023: 'f' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
noTypeToStringRecursion.ts(3,20): error TS1360: Type 'number' does not satisfy the expected type '() => any'.


==== noTypeToStringRecursion.ts (2 errors) ====
    // https://github.com/microsoft/typescript-go/issues/3805
    
    const f = () => 42 satisfies typeof f;
          ~
!!! error TS7023: 'f' implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.
                       ~~~~~~~~~
!!! error TS1360: Type 'number' does not satisfy the expected type '() => any'.
    